# flumeJava-eval

./: README.md
beam-pipelines/: dependency-reduced-pom.xml  pom.xml
beam-pipelines/src/main/java/org/example/beam/batch/: WebCountFlumeJavaBenchmark.java  WebLogFlumeJavaPipeline.java  WebLogMapReducePipeline.java  WordCount.java  WordCountFlumeJavaBenchmark.java  run_weblog_mapreduce.sh  run_wordcount.sh
beam-pipelines/src/main/resources/: ApacheLog1.csv  ApacheLog1.txt  ApacheLog2.csv
data/: generator.py
data/input_files/: large_input.txt  large_repetitive_input.txt  medium_input.txt  small_input.txt
evaluation/: Cargo.toml  baseline_large_input_results.csv  baseline_large_repetitive_input_results.csv  baseline_medium_input_results.csv  baseline_small_input_results.csv  weblog_combined_results.csv
evaluation/src/: main.rs  metrics.rs  pipeline_runner.rs  results.rs
