[package]
name = "evaluation"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.29.10"  # For system metrics (CPU, memory)
anyhow = "1.0"      # For error handling
tokio = { version = "1.0", features = ["full"] } # Async runtime
csv = "1.3"         # For saving results
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
plotters = "0.3"